[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "regmodsm"
version = "0.1.0"
description = "Regression model smoother"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
dependencies = ["regmod==0.1.0"]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[project.urls]
github = "https://github.com/ihmeuw-msca/regmodsm"

[tool.sphinx]
project = "regmodsm"
author = "IHME Math Sciences"
copyright = "2023, IHME Math Sciences"
version = "0.1.0"
